--- a/Ancient_spells.html
+++ b/Ancient_spells.html
@@ -81,6 +81,132 @@
 
 
 
+
+    <a></a>
+    [리얼리티 트랜서핑2 67] 소위 지성적이라는 사람들의 비밀은 깨어 있는 의식에 있다. 마음의 명료함은 깨어 있는 정도에 의해 결정된다. 명석한 사람들은 생각을 명료하게 펼쳐낼 수 있다. 다른 사람들은 머릿속에 어지럽다. 날카로운 지성과 우둔함을 가르는 것은 결코 지적 능력의 발달정도가 아니다. 그것은 의식이 깨어 있는 정도의 차이다. 우둔함은 원치 않는 정보로부터 자신을 보호하기 위한 일종의 심리적 방패다. "난 아무것도 알고 싶지 않아! 날 그만 내버려둬!" 명료한 마음은 그와 정반대로 열린 마음, 호기심, 정보를 얻어 처리하고자 하는 욕망이다. "난 모든 것을 알고 싶어!"
+    <br><br>
+
+    <a></a>
+    [리얼리티 트랜서핑2 66-67] 감독자의 역할은 연기하는 자의 역할보다 훨씬 더 흥미롭다. 아시다시피 명령권자, 지휘자, 지도자가 평범한 일꾼들보다 더 적극적이고 활동적인 삶의 입지를 가지고 있다. 지도자는 의무를 수행하는 사람이라기보다는 감독자다. 그들의 위치는 주어진 일을 억지로 하는 동안 잠들어 있을 수 있는 평범한 일꾼들에 비해서 더욱 깨어 있기를 요구한다. 감독자의 입장을 취하면 당신은 당장 에너지가 몰려오는 것을 느낄 것이다. 이제는 타인의 의지를 이뤄주는 일을 하면서 우울해하는 것이 아니라 자신의 운명을 창조해가고 있으므로 기운이 샘솟을 것이다. 자신의 운명을 책임진다는 것은 짐이 아니다. 그것은 자유다.
+    <br><br>
+
+    <a></a>
+    [리얼리티 트랜서핑2 65-66] 의식이 깨어 있게 한다는 것을 주변세계에 대한 지배력을 얻고자 하는 욕망으로 해석한다면 그것은 실수다. 마음은 일의 전개를 바꿔놓으려고 애쓰면서, 달리 말해서 흐름과 싸우면서 자신의 길을 뚤혹 가는 방식에 익숙해 있다. 당신이 객석에 내려가 있다면 배우에게 의지력을 행사하여 시나리오를 억지로 바꿔놓고 싶은 욕심이 일어날 수도 있을 것이다. 그런 행동은 오로지 흐름과 싸우려는 내부의도에 의한 것이므로 트랜서핑과는 아무런 상관도 없다. 가능태 흐름을 타고 움직여야 함을 한시도 잊지 않도록 자신을 거듭 일깨우라. 깨어 있는 의식은 통제와 지배를 위한 것이 아니라 관찰을 위한 것이다. 통제력은 오직 부정적인 함정에 빠지지 않고 그 대신 유쾌한 시나리오를 상상하고 그것을 당신의 삶 속에 맞이하여 온 가슴으로 받아들이는 데에만 발휘되어야 한다. 당신의 시나리오를 세상에 강요하지 말라. 특정 가능태가 스스로 실현되게끔 세상이 허용하는 일이 일어날 가능성을 열어두라. 자신이 그 가능태를 가지게끔 허락하라. 세상과 싸우기를 멈추라. 영혼과 마음이 일치되었을 때만, 당신은 스스로 선택할 수 있게 될 것이다.
+    <br><br>
+
+    <a></a>
+    [리얼리티 트랜서핑2 65] 당신은 더이상 꼭두각시 인형이 아니다. 다만 당신이 자신을 인형을 부리는 자로 상상하고 싶어지게 만드는 유혹에 넘어가지 말 것을 경고해둬야겠다. 그런 태도는 균형을 흩트려놓으며, 자만심이나 타인에 대한 원한의 기미가 엿보였다가는 틀림없이 큰 코를 다치게 된다는 점을 명심해야 한다. 만사를 절대적으로 완전히 지배한다는 것은 꿈속에서조차 일어날 수 없는 일이다. 명심하라. 당신은 단지 선택할 권리가 있을 뿐이지, 무엇을 변화시킬 권리는 없다. 집에 온 것처럼 편안히 지내라. 하지만 당신은 단지 손님일 뿐임을 명심하라. 다음 사실도 명심해야 한다. 자신을 빌려줄 때, 흠잡을 데 없이 행동하라. 문제에 대해 '희극적인' 태도를 취한다는 것은 그것을 게으르게 방치하거나 부주의하게 구는 것이 아니라 그 중요성을 올바르고 현명하게 평가하는 것이다.
+    <br><br>
+
+    <a></a>
+    [리얼리티 트랜서핑2 63-64] 누군가가 골치 아픈 일을 가지고 당신에게 접근한다. 자신을 일깨워서 이렇게 말하라. 당신은 잠들어 있지 않으며, 펜듈럼의 걸어오는 첫 수작이 당신에게 문젯거리로 변하게 될지 어떨지는 당신이 결정하는 문제라고. 이제 당신은 한 가지 조건만 더 갖추면 된다. 펜듈럼이 헛발질을 하게 만들겠다는 의도를 가지는 것이다. 장차 어떤 일이 일어날지 알 수 없더라도 그 상황을 대수롭지 않게 생각하기로 마음먹는 것으로 선수를 치라. 누구도, 어떤 일도 당신을 붙잡고 제멋대로 끌고 가게끔 내버려두지 말아야 한다. 공격적인 행동을 하지 말라. 거부하지도 말고 상황에서 빠져나가려고 하지도 말라. 그리고 그보다 더 중요한 것은, 흥분하지 말라. 그냥 조용히, 그가 당신에게 무엇을 시키려고 하는지를 듣고 있으라. 내면으로는 참여자가 아니라 외부의 관찰자로 남아 있어야 하지만, 겉으로는 고개를 끄덕이면서 좋다고 말해주는 편이 낫다. 이것이 관객으로 있으면서 동시에 자기 역할을 하는 것이다. 그것은 축구 코치가 축구경기를 뛰는 것에 비유할 수 있다.<br>
+    이 경우에 초연한 상태란 마음이 떠나 있는 것이 아니라 오히려 그 반대다. 상황을 장악하고 있다는 것은 주의가 골고루 미치고 사고가 명료함을 시사한다. 관찰자가 된다는 것은 당신이 게임의 룰을 정하는 사람이며 희극이 될지 비극이 될지를 결정하는 사람임을 알고 있다는 뜻이다. 그렇다면 당신은 무엇을 원하는가? 아마도 당신은 만사가 멋지게 술술 풀려나가길 원할 것이다. 세상에는 많은 노력을 요구하는 어려운 문제들이 언제나 쌓여 있다고 생각한다면, 걱정 말라. 모든 어려운 문제에 대한 간단한 해결책이 있다. 이 해결책은 '코미디' 인생 트랙 위에 있다. 이 인생트랙으로 옮겨가려면 만사가 그런 식으로 풀려가는 것을 상상하려는 의도만 있으면 된다.
+    <br><br>
+
+    <a></a>
+    [리얼리티 트랜서핑2 61-62] 삶에 대해서, 그리고 꿈에 대해서도 지배력을 얻으려면 참여자로부터 관찰자로 역할을 바꿀 필요가 있다. 하지만 그럴 때도 역할게임에 참여하기를 멈추지 말고 이전과 같이 자신의 역할을 연기하라. 단 내면의 지켜보는 자는 언제나 깨어서 활동해야 한다. 그것은 마치 배우 노릇을 하도록 자신을 빌려주지만 동시에 관객으로서 객석에 앉아 자신과 다른 사람들의 연기를 초연하게 구경하고 있는 것과 같다. 지켜보는 자는 언제나 배후에서 깨어 있다. 그는 끼어들지 않지만 일어나는 모든 일을 샅샅이 파악하고 있다.<br>
+    수동적인 꿈에서는 관찰자는 없고 배우만 있다. 당신은 자신의 역에 완전히 빠져들어 있어서 상황을 밖으로부터 바라보지 못한다. 자신의 역할에 너무 깊이 빠져들지 말라. 내적, 외적 중요성을 최저수준으로 유지하는 것이 그 열쇠다. 당신의 지켜보는 자를 항상 대기시켜라. 상황을 지배하는 능력은 당신의 깨어 있는 정도에 정비례한다. 꿈속에서는 의식의 각성도가 낮고, 그것이 꿈이 '일어나는' 이유다. 하지만 자신이 꿈꾸고 있다는 사실을 깨닫기만 하면 상황이 통째로 당신의 지배하에 놓이게 된다. 원하는 것을 무엇이든 할 수 있게 되는 것이다.
+    <br><br>
+
+    <a></a>
+    [리얼리티 트랜서핑2 61] 무의식적인 꿈은 어떤 제어도 받지 않는다. 꿈이 그저 '일어난다.' 당신의 대부분의 행동은 다소간에 무의식적인데, 그것은 꿈속에서만이 아니라 깨어 있을 때도 그렇다. 상황을 의식하지 못한다는 것은 상황이 외부적 요인에 의해 일어나기 때문에 이미 결정되어 있다고 생각한다는 뜻이다. 대부분의 경우, 당신은 힘도 수단도 없어서 그 요인들에 별다른 영향을 미칠 수가 없다. 이런 생각을 가지고 있는 한 당신의 인생은 대개 다른 사람들이나 운명의 부침에 따라 이리저리 휘둘린다. 그런 의미에서는 현실 또한 당신에게 '일어나는' 것일 뿐이다. 게임의 룰은 당신이 아니라 외부세계에 의해 정해진다.
+    <br><br>
+
+    <a></a>
+    [리얼리티 트랜서핑2 61] 외부의도는 의지력의 산물로서 나타나는 것이 아니라 영혼과 마음의 일치의 결과로 나타난다. 내부의도(당신의 의지)는 오직 이 일치를 이루어내는 데이에만 겨누어져야 한다. 이런 의미에서 외부의도는 의지력의 소산이 아니며 의지와는 독립적으로 기능한다. 하지만 외부의도가 나타나려면 당신에게 시나리오를 바꾸는 능력이 있다는 사실을 깨달아야만 한다. 의부의도가 당신을 위해 작용하게 하려면 깨어 있는 의식이 필수적인 조건이다.
+    <br><br>
+
+    <a></a>
+    [리얼리티 트랜서핑2 51] 유감스럽게도 현실에서 영혼과 마음은 원치 않는 것, 또는 받아들이지 않는 것이 무엇인지에 대해 의견이 가장 잘 일치한다. 그래서 외부의도가 작용하는 가장 전형적인 예도 우리가 두려워하는 것이 실현되는 경우인 것이다. 사람들은 자신이 온 가슴으로 원하는 것이 무엇인지에 대해서는 막연한 생각밖에 가지고 있지 않지만 정말 피하고 싶은 것이 무엇인지는 너무나 잘 알고 있다. 외부의도가 의지에 복종하게 하기 위해서는 영혼과 마음이 부정적인 생각을 버리고 긍정적인 열망을 향해 의기투합하게 해야 한다. 부정적인 태도가 삶에 얼마나 해로운 결과를 가져오는지는 당신도 이미 알고 있다. 불만감과 거부감을 표할 때마다 당신은 균형력의 작용에 영향받고, 파괴적 펜듈럼에 의존하게 되고, 가능태 공간의 부정적인 섹터로 사념 에너지를 보내고 있는 것이다. 부정적 태도에 의해 형성된 외부의도는 현실을 부정적인 것으로 만든다.
+    <br><br>
+
+    <a></a>
+    [리얼리티 트랜서핑2 44] 이제 우리는 어떤 목표를 이루고자 하는 정신 에너지의 본질은 욕망과 내부의도와 외부의도라는 세 가지의 형태로 표출될 수 있음을 알았다. 욕망은 목표 자체에다 주의를 모으는 것이다. 아시다시피 욕망은 내봤자 그것만으로는 아무것도 변하지 않는다. 내부의도는 목표를 향해 움직여가는 과정에 주의를 모으는 것이다. 이것은 잘 먹혀든다. 하지만 많은 노력이 드는 것이 사실이다. 외부의도는 목표가 스스로 실현되는 이치에 주의를 모으는 것이다. 외부의도는 목표가 스스로 실현되도록 그저 '허용'한다. 그것은 동시에, 목표의 가능태가 이미 존재하며 당신은 그것을 선택하기만 하면 된다고 확신하고 있음을 암시한다. 내부의도는 목표를 성취하는 반면에 외부의도는 목표를 선택한다.
+    <br><br>
+
+    <a></a>
+    [리얼리티 트랜서핑2 36-37] 지구가 태양에게 다른 궤도를 돌도록 해달라고 조른다고 상상해보라. 얼마나 터무니없는 일인가? 사람이 아닌 어떤 존재나 어떤 것에게 다가가서 뭔가를 간청한다는 것도 마찬가지로 터무니없는 짓이다. 이해할 수 있는 유일한 짓은, 선택하려는 의도를 가지는 것이다. 당신은 실제로 자신의 운명을 선택하고 있다. 당신이 방사하는 에너지의 매개변수가 당신의 선택과 맞아떨어지고, 동시에 어떤 법칙에도 위배되지 않는다면 당신은 원하는 것을 얻을 것이다. 선택은 간청이 아니다. 그것은 가지겠다는, 그리고 행하겠다는 당신의 결정이다.<br>
+    의도는 잉여 포텐셜을 만들어내지 않는다. 욕망에 의해 만들어진 포텐셜 에너지가 행동에 사용되기 때문이다. 욕망과 행동은 의도 속에서 하나가 된다. 행동 속의 의도는 욕망에 의해 만들어진 잉여 포텐셜을 자연스럽게 해소시켜준다. 이것은 균형력의 개입 없이 일어난다. 문제를 해결하고자 한다면 행동하라. 문제가 어렵다고 고민하고 있다면 당신은 잉여 포텐셜을 만들어내고 있고, 동시에 펜듈럼에게 에너지를 뺏기고 있는 것이다. 행동할 때, 당신은 의도의 에너지를 실현시키고 있는 것이다. 러시아 속담에 이런 말이 있다. "눈은 겁내고 있지만 손은 일하고 있다." 의도를 실천할 때, 가능태 흐름에 몸을 맡기라. 그러면 문제는 저절로 해결될 것이다.<br>
+    기대, 근심, 지나친 고민과 욕망은 당신의 에너지를 빨아먹을 뿐이다. 행동 속의 의도는 포텐셜 에너지를 소비해줄 뿐만 아니라 기운을 불어넣어준다. 공부의 예에서 그 증거를 찾아볼 수 있다. 시험 직전에 주입식의 벼락공부를 하는 것은 노력은 많이 들어도 효과가 없다. 하지만 반대로 적극적인 태도록 공부하면, 다시 말해서 진짜 공부를 하고 문제를 풀면 그것은 기운을 빼앗지 않을 뿐만 아니라 영감과 만족을 가져다준다.
+    <br><br>
+
+    <a></a>
+    [리얼리티 트랜서핑1 259p] 모든 것은 단순합니다. 세상은 당신의 세상에 대한 태도를 거울처럼 비춰줍니다. 당신이 세상과 싸우면, 세상은 당신과 싸웁니다. 당신이 싸움을 멈추면, 세상이 다가와 당신을 맞이할 겁니다.<br>
+    그저 자신에게 원하는 것을 얻도록 허용한다면, 외적 의도는 그것을 당신에게 줄 수 있는 방법을 찾을 것입니다. 그리고 어느 날 놀라운 일이 벌어질 것입니다. 목표를 성취하기를 필사적으로 원하시나요? 이제 그만 원하기를 멈추세요. 당신은 어떻게든 그것을 얻게 될 겁니다. 그저 당신이 원래 자기 소유인 것을 가진다고 생각하세요. 당신은 그것을 요구하거나 주장하지 않고서 편안히 가지게 됩니다. 내가 그걸 가진다는데, 뭐가 문제입니까? 난 그냥 내가 바라는 것을 가지게 될 겁니다.
+    <br><br>
+
+    <a></a>
+    [리얼리티 트랜서핑1 256p] 평생 저는 반-트랜서핑을 해왔어요. 모든 것을 트랜서핑과는 반대로 해왔다는 거죠. 영리한 사람들은 다른 사람들의 실수를 보고 배우지만, 바보들은 자신의 실수에서 배웁니다. 그런 의미에서 저는 정말 바보였지요. 그렇지만 자신의 실수와 남의 실수 중, 어느 것에서 더 깊은 교훈을 얻을 수 있을까요? 영리한 사람은 무엇이 옳고 무엇이 그른지만 알지요. 달리 말하자면, 영리한 사람은 정보만 알고 있을 뿐, 그것을 깨닫지는 못합니다. 그와 달리 바보는 부딪혀 머리에 혹이 날 때마다 거기에서 실수의 핵심을 느끼고 깨닫습니다. 그는 살아 있는 진정한 지식을 얻는 것이지요. 오직 바보만이 신비지식의 안내자가 될 수 있다는 것은 분명한 사실입니다.
+    <br><br>
+
+    <a></a>
+    [리얼리티 트랜서핑1 251p] 아니 그렇다면 전혀 말도 말고 튀지도 말라는 이야긴가? 뭐, 그 정도까지는 아니다. 이 문제를 비즈니스적인 관점에서 접근해보라. 당신은 당신을 직접 괴롭히는 사람에게만 화내고 꾸짖을 수 있다. 그것도 당신의 비판이 뭔가를 더 좋게 변화시켜 놓을 수 있을 경우에만 그렇다. 이미 일어난 일이나 변화시킬 수 없는 것은 절대로 비판하지 말라. 그 밖의 다른 모든 일에 있어서는 흐름을 따라갈 필요가 있다. 그러나 문자 그대로 모든 상황과 사람에 맞추라는 것이 아니라 단지 통제로부터 관찰로 무게중심을 옮김으로써 그렇게 하라는 것이다. 상황이든 사람들이든 뭐든 더 많이 지켜보고, 성급하게 통제하려 덤비지 말라. 언제 어떻게 끼어들지, 그 알맞은 정도를 느낀느 감각이 저절로 생겨날 것이다. 그 문제라면 걱정하지 말라.
+    <br><br>
+
+    <a></a>
+    [리얼리티 트랜서핑1 251p] 당신은 새 직장에서 극성맞게 나서서 기존의 사무체계를 어지럽힌다. 더 완벽하게 처리할 수 있는 일들이 많아 보이고, 당신은 자신이 올바른 짓을 하고 있음을 믿어 의심치 않는다. 그러나 당신의 혁신이 직장의 일상적 생활패턴을 파괴하는 것이라면 거기서 좋은 결과가 나오리라는 기대는 하지 말라. 이것이 바로 솔선수범이 오히려 벌을 버는 경우다. 당신은 느리지만 유유한 흐름 속에 들어와서는 더 빨리 헤엄쳐보겠노라고 안간힘을 다해 헛손질을 시작하고 있는 것이다.
+    <br><br>
+
+    <a></a>
+    [리얼리티 트랜서핑1 250p] 당신의 이익에 그다지 해가 되지 않는다면, 상황을 놓아 보내라. 다른 사람들에게도 허우적거릴 권리를 허용해주라. 온전히 깨어 있는 의식으로써 이렇게 한다면 당신은 즉석에서 크나큰 안도와 경이를 느낄 것이다. 자신의 관점을 입증했을 때보다 훨씬 더 멋진 기분일 것이다. 자신이 다음 단계로 올라섰다는 사실에 만족을 느낄 것이다. 당신은 전처럼 자신의 중요성을 애지중지 받들지 않고, 철없는 아이의 현명한 부모와도 같이 행동한 것이다.
+    <br><br>
+
+    <a></a>
+    [리얼리티 트랜서핑1 248-249p] 자, 움켜쥔 통제의 손을 늦추고 흐름에 더 많은 자유를 허용해주어보라. 모든 일에 동의하라거나 주어진 모든 것을 받아들이라고 하는 것은 아니다. 단지 당신의 전략을 바꾸어보라는 것이다. 무게중심을 통제에서 관찰로 옮겨보라. 통제하고 조종하기보다는 지켜보려고 애쓰라. 성급하게 뿌리치고 거부하고 반박하고 자신의 의견을 밀어붙이고 방해하고 조종하고 비판하지 말라. 당신이 나서서 끼어들거나 저항하지 않는 가운데 상황이 스스로 해결될 수 있도록 기회를 줘보라. 당신은 분명히 깜짝 놀라 말문이 막히게 될 것이다. 그렇지 않으면 적어도 감탄하게 될 것이다. 완벽한 반전이 일어날 테니까. 상황을 통제하려는 욕심을 내려놓으면 이전보다 더 큰 통제력을 얻을 것이다. 초연한 관찰자는 직접 참여하는 사람보다 언제나 더 유리하다. 내가 이 말을 자꾸 반복하는 것도 이 때문이다. 당신 자신을 빌려주라.
+    <br><br>
+
+    <a></a>
+    [리얼리티 트랜서핑1 223p] 어떤 해결책을 찾아야 하게 될 때마다, 자신에게 이렇게 질문하라. 해법을 찾는 가장 간단한 길은 무엇일까? 해결책을 찾는 가장 단순한 방법을 택하라. 누군가, 혹은 뭔가가 당신을 혼란시키거나 옆길로 새게 만든다면 함부로 그에 저항하거나 회피하려 들지 말라. 당신 자신을 빌려주라. 그리고 무슨 일이 일어나는지를 지켜보라. 어떤 일을 해야 할 때마다 스스로 이렇게 질문하라. 이 일을 하는 가장 단순한 방법은 무엇일까? 일이 가장 단순한 방식으로 이루어지도록 놔두라. 어떤 사람이 뭔가를 제안하거나 자신의 관점을 제시할 때, 그것을 성급하게 거부하거나 반박하지 말라. 어쩌면 당신의 마음이 그것의 장점을 이해하지 못하여 거기서 대안을 찾아내지 못하는 것일지도 모른다. 지켜보는 자를 일깨우라. 먼저 지켜보고 나서, 그다음에 행동하라. 무대로부터 객석으로 내려가라. 그리고 상황을 지배하려들지 말라. 당신이 지켜보는 가운데, 게임이 제 스스로 최대한 펼쳐지도록 내버려두라. 거기에 괜히 끼어들어서 허우적거리지 말라. 당신의 삶이 흐름을 타고 가는 것을 훼방하지 말라. 그러면 당신은 일이 얼마나 더 쉬워지는지를 알게 될 것이다.
+    <br><br>
+
+    <a></a>
+    [리얼리티 트랜서핑1 217p] 마음은 끊임없이 지껄이느라 바쁘다. 마음은 모든 것이 지적으로 설명될 수 있다고 생각하고, 모든 정보를 통제하려고 끊임없이 애쓰고 있다. 마음은 영혼으로부터 모호한 신호만을 받고 있다. 그런 신호는 범주의 도움으로 식별해낼 수 없을 때가 많다. 영혼의 모호한 느낌과 지식은 마음의 시끄러운 생각들 때문에 들리지 않는다. 마음의 통제가 조금 약해지면 그 틈을 타서 직관적 지식과 느낌이 의식 속으로 뚫고 들어갈 수 있게 된다.<br>
+    이렇게 뚫고 들어올 때 그것은 모호한 예감의 형태로 나타날 수 있다. 그것은 내면의 목소리라고 부르기도 한다. 마음이 느슨해지면 그 순간에 당신은 영혼의 느낌이나 앎을 감지하게 되는 것이다. 이것이 바로 소위 새벽별이 속삭이는 소리, 곧 말 없는 목소리, 생각 없는 사유, 소리 없는 소리이다. 당신은 뭔가를 이해하는 듯하지만 선명하지 않다. 생각하지 않고 직감으로 느낀다. 직관이 무엇인지는 살다 보면 누구나 적당한 때에 스스로 경험하게 된다. 예컨대 당신은 지금 누가 이리로 오고 있다고 느끼거나, 무슨 일이 곧 일어나리라고 느낀다. 혹은 설명할 수는 없지만 뭔가를 그저 알고 있다.
+    <br><br>
+
+    <a></a>
+    [리얼리티 트랜서핑1 207p] 유도전이를 피하는 유일한 방법은 나선의 끝을 붙잡지 않는 것, 파괴적 펜듈럼의 게임에 말려들지 않는 것이다. 단순히 이 메커니즘이 어떻게 작동하는지를 아는 것만으로는 충분하지 않다. 당신은 언제나 그것을 기억해야 한다. 당신의 '지켜보는 자'는 잠들지 않아야 한다. 습관적으로 펜듈럼의 게임을 받아들일 때마다 꿈을 깨듯 정신을 차리라. 불만, 분노, 근심이 올라올 때마다, 건설적이지 못한 토론에 끼게 될 때마다 정신을 차리고 깨어나라. 기억하라. - 당신을 부정적으로 반응하게 만드는 모든 것은 파괴적 펜듈럼의 도발이라는 것을. 꿈에서도 똑같은 일이 일어난다. 그것이 꿈임을 깨닫기 전에는 말이다. 당신은 다른 누군가의 손에 매달려 있는 꼭두각시 인형이다. 그리고 악몽에 시달리고 있는 것이다. 꿈에서 깨어나 이런 망상들을 흔들어 떨쳐버리고 게임의 진정한 본질을 깨달으라. - 당신은 삶의 주인이다. 주변의 모든 사람이 좀비처럼 살고 있지만 당신은 환경의 희생자가 아니라 환경의 주인이다.
+    <br><br>
+
+    <a></a>
+    [리얼리티 트랜서핑1 167-169p] 중요성을 줄인다고 삶 속의 문제가 당장 확 줄어드는 것은 아니다. 다만 외적, 내적 중요성을 거부함으로써 당신은 선택의 자유라는 보물을 얻게 된다. 당신은 이렇게 물을 것이다. "무슨 소린가? 트랜서핑의 원리에 따르자면 우리는 이미 선택의 권리가 있다는데." 물론 당신은 권리를 가지고 있다. 하지만 그것을 사용할 줄을 모른다. 균형력과 펜듈럼이 길을 가로막고 있다. 지나친 중요성 때문에 우리의 삶은 균형력과 싸우는 데에 온통 소모되고 만다. 정작 선택을 내리기 위해 필요한 에너지가 남아 있질 않은 것이다. 삶에서 당신이 정말 무엇을 원하는지를 생각해볼 에너지는 말할 것도 없다. 반면에 펜듈럼은 우리를 사로잡아 다른 누군가의 목표에 봉사하게 하려고 호시탐탐 노린다. 여기에 무슨 자유가 있겠는가?<br>
+    외적이든 내적이든 모든 형태의 중요성은 다 우리가 만들어낸 것이다. 이 세상에서 그 누구도 특별히 중요하지 않다. 그러나 동시에 우리는 누구나 세상의 모든 풍요를 누릴 수 있다. 바닷가에서 물장구치며 재미있게 노는 아이들을 상상해보라. 그 아이들 중 아무도 자기가 착하거나 나쁘다는 생각을 하지 않는다고 가정해보자. 그들은 바닷물이 좋다 나쁘다 생각하지 않으며, 또한 다른 아이들이 착하다 나쁘다 생각하지도 않는다. 그런 상태가 지속되는 한 아이들은 행복하다. 그들은 자연과 조화롭게 하나로 어울린다. 마찬가지로, 우리는 모두 이 세상에 올 때 자연의 아이로 왔다. 자연의 균형을 깨뜨리지 않는다면 우리는 세상에서 최선의 것을 얻을 수 있다. 하지만 중요성을 만들어내면 그 즉시 문제가 일어날 것이다. 우리는 중요성과 문제 사이의 상관 관계를 제대로 보지 못한다. 그래서 세상이 원하는 것을 얻기가 힘든, 적대적인 환경으로 보이는 것이다. 사실은, 소망을 성취하는 길에서 유일한 장애물은 인위적으로 만들어낸 중요성이다. 당신이 이것을 믿게 하는 데는 아직 성공하지 못했을지 모르지만, 아직도 할 이야기는 얼마든지 많다.
+    <br><br>
+
+    <a></a>
+    [리얼리티 트랜서핑1 166p] 그러니까 세상과 조화롭게 지내고 펜듈럼에게서 벗어나려면 과도한 중요성을 감소시킬 필요가 있다. 당신이 자신과 주변 세상에 대해 얼마만큼의 중요성을 부여하고 있는지를 늘 지켜보고 있어야 한다. 당신 내면의 지켜보는 자는 잠들어서는 안 된다. 중요성이 줄어들면 당신은 이내 균형 상태에 들어가고, 펜듈럼이 당신을 지배할 수 없게 된다. 텅 비어 있는 것을 갈고리로 걸 수는 없지 않은가. 당신은 이렇게 반박할 지도 모르겠다. - 그게 무슨 말인가, 우리가 모두 죽은 사람처럼 살아야 한단 말인가? 나는 결코 모든 감정을 거부하라고 말하는 것도 아니고 감정의 강도를 낮추라고 말하는 것조차도 아니다. 어찌됐든 감정을 대적하는 것은 백해무익한 일이다. 속마음은 부글부글 끓는데 마음을 억누르고 태연한 척하면 잉여 포텐셜은 더욱 커진다. 감정은 태도에서 나온다. 그러므로 당신은 먼저 태도를 바꿔야 한다. 느낌과 감정은 결과물일 뿐이다. 감정은 단 하나의 원인 - 중요성에서 나오는 것이다.
+    <br><br>
+
+    <a></a>
+    [리얼리티 트랜서핑1 161-162p] 당신이 그런 상황에 직접 얽혀 있지 않을 때는 주변의 모든 사람을 괴롭히면서 매사를 완벽히 하려고 애쓰는 사람의 어리석은 행위를 높이 평가할지도 모른다. 그렇지만 완벽주의자는 자신의 역할에 너무 깊이 빠져든 나머지, 자기는 흠 없는 사람이며 자기가 하는 모든 일은 옳다고 생각하기 시작한다. 어떤 면에서, 그는 세상 사람들에게 이렇게 말하고 있는 것이다. "이상적인 역할 모델이 되고자 애쓴 결과, 이제 나는 그런 사람이 되었다." 어쩌면 완벽주의자는 자신의 탁월함은 보통 사람들이 생각하는 완벽의 개념과는 다르다고 생각하기 때문에 이런 인정조차 하지 않을지도 모른다. 아무튼 '매사에서 옳다는 느낌'이 그런 완벽주의자의 잠재의식에 깊이 뿌리박고 있다.<br>
+    이런 점에서, 완벽주의자는 최후의 심판관으로서 인류 앞에 나서고자 하는 유혹에 빠져들 위험이 있다. 길 잃은 모든 영혼에게 무엇을 어떻게 할지를 판결해주려는 것이다. 물론 완벽주의자는 쉽사리 이 유혹에 굴복하고 만다. 자신이 항상 옳다는 느낌이 그의 행동을 정당화 할 것이고, 세상을 올바른 길로 안내하고자 하는 의로운 욕망이 충분한 동기를 부여해줄 것이다.<br>
+    그 순간부터 이 '운명의 결정자'는 다른 사람들을 심판하고 처벌할 권리를 자신에게 부여한다. 물론, 현실에서 그런 재판은 일상적인 설교와 비난의 수준을 넘지 못한다. 하지만 에너지 차원에서는 가장 강력한 잉여 포텐셜이 형성된다. '심판관'은, 어리석고 쓸모없는 이 사람들이 어떻게 행동해야 할지, 무엇을 생각해야 할지, 무엇을 가치 있게 여겨야 할지, 무엇을 믿고 무엇을 추구해야 할지를 결정해주는 사명을 떠맡는다. 만일 어떤 하찮은 인간이 갑자기 자기만의 견해를 가지겠다고 나선다면 그를 제자리로 데려다줘야 한다. 그가 조금이라도 저항하는 기색을 보이면 심판하고 죄목을 밝혀서 모든 사람이 자신의 분수를 깨닫게끔 해줘야 한다.
+    <br><br>
+
+    <a></a>
+    [리얼리티 트랜서핑1 160-161p] 매사에 완벽을 추구하는 것이 사람에 따라서는 강박증이 될 수도 있다. 그런 사람들의 삶은 끊임없는 투쟁이다. 그들이 무엇과 싸우고 있을지 추측해보라. 물론 그것은 균형력이다. 모든 곳에서, 모든 일에 완벽해지려는 목표를 세워놓으면 그것은 에너지 차원에서 복잡한 혼란을 일으킨다. 그들ㄹ이 내리는 가치평가는 뒤바뀌고, 그 결과로 잉여 포텐셜이 만들어지기 때문이다.<br>
+    모든 일에 항상 최선을 다하려는 것은 나쁘지 않다. 그러나 그것을 지나치게 중요하게 여기면 바로 그 자리에 균형력이 출현할 것이다. 균형력은 모든 것을 망가뜨려놓을 것이다. 게다가 이것은 피드백 순환을 일으키기 때문에 완벽해야 한다는 당신의 강박관념은 점점 더 심해져 갈 것이다. 당신은 완벽해지기를 원하지만 오히려 그 반대의 결과를 얻는다. 그러면 당신은 더욱 필사적으로 모든 것을 고쳐보려고 애쓴다. 그러나 모든 것은 더욱 악화되기만 한다. 결국 완벽을 추구하는 것이 하나의 습관이 되고, 나아가서 편집증으로 발전할 수도 있다. 완벽주의자의 삶은 끊임없는 투쟁으로 변하고, 그것은 당연히 주위 사람들의 삶을 해친다. 완벽주의자는 자기 자신에게만 그런 게 아니라 다른 사람들에게도 온갖 것을 까다롭게 요구하기 때문이다. 이는 완벽주의자들이 다른 사람들의 습관과 기호를 존중해주지 못하는 것을 보면 분명히 드러난다. 이런 태도는 종종 작은 갈등을 일으키지만 때로는 심각한 갈등으로 바뀌기도 한다.
+    <br><br>
+
+    <a></a>
+    [리얼리티 트랜서핑1 158p] 당신이 부자여야만 목표가 성취될 수 있다고 믿는다면 그런 조건은 지옥에나 보내버려라. 당신이 세계여행을 하고 싶어한다고 가정하자. 그러기 위해서는 많은 돈이 필요한 것이 분명하다. 원하는 것을 얻기 위해서는 돈이 아니라 그 목표 자체를 생각해야 한다. 돈은 저절로 따라올 것이다. 돈은 거기에 따라오는 부수물이기 때문이다. 이렇게 간단한 일이다. 불가능한 이야기처럼 들리는가? 하지만 이것이 사실이고, 당신은 곧 스스로 이 사실을 확인하게 될 것이다. 자신의 이익만을 좇는 펜듈럼들은 모든 것을 거꾸로 왜곡시켜놓았다. 목표가 이루어지게 하는 것은 돈이 아니다. 당신이 목표를 향해갈 때 돈이 따라 들어오는 것이다.
+    <br><br>
+
+    <a></a>
+    [리얼리티 트랜서핑1 157p] 자신의 이익을 좇는 펜듈럼들은, 무엇이든 얻으려면 그것을 얻기 위한 수단을 가져야만 한다는 신화를 만들어냈다. 이렇게 해서 각 개인의 목표는 인공의 대체물인 돈으로 바뀌어버렸다. 사람들은 많은 펜듈럼들로부터 돈을 얻어낼 수 있으므로 이제는 자신의 목표를 생각하는 게 아니라 돈만을 생각하게 되고, 그 결과 엉뚱하게도 펜듈럼의 영향 아래에 놓이게 된다. 이제 사람들은 자신이 삶에서 무엇을 원하는지는 알지도 못한 채 부질없는 돈벌이 경쟁에 뛰어든다.<br>
+    이렇게 되면 물론 펜듈럼에게는 아주 유리해지지만, 사람은 돈과 펜듈럼에 종속된 채 방향을 잃고 헤맨다. 엉뚱한 펜듈럼을 위해 일하지만 결코 많은 돈을 벌지 못할 것이다. 다른 누군가의 목표를 위해 일하기 때문이다. 많은 사람들이 이런 상황에 빠져 있다. 그래서 사실은, 누구든 자신의 목표를 추구하기만 하면 부자가 될 수 있다.
+    <br><br>
+
+    <a></a>
+    [리얼리티 트랜서핑1 156-157p] 돈을 가지려고 애쓰지 않으면서 돈을 사랑하기란 어렵다. 그러므로 이 경우에 의존적 관계를 피하기는 실질적으로 불가능하다. 단지 그런 관계를 최소화하려고 노력할 수 있을 뿐이다. 돈이 들어온다면 행복해하라. 그러나 단지 돈이 부족하다고 해서, 혹은 돈을 잃었다고 해서 괴로워하지는 말라. 괴로워할수록 들어오는 돈이 점점 줄어들 것이다. 돈을 많이 벌지 못할 때 사람들이 저지르는 실수는, 돈이 늘 부족하다고 한탄하는 것이다. 그 같은 에너지의 매개변수는 궁핍한 인생트랙과 일치한다.<br>
+    돈이 갈수록 점점 줄어들고 있다는 불안감에 굴복하는 것은 특히 위험하다. 두려움은 에너지가 가장 많이 충전된 감정들 중 하나다. 그래서 돈을 잃을까봐 두려워하고 충분히 벌지 못할까봐 두려워함으로써 당신은 가장 효과적으로, 실제로 돈이 점점 줄어드는 인생트랙으로 옮겨가게 된다. 이 함정에 빠진다면 거기서 빠져나오는 것은 쉽지는 않지만 분명히 가능한 일이다. '돈의 함정'에서 탈출하기 위해서는 당신이 스스로 만들어낸 잉여 포텐셜의 원인을 제거할 필요가 있다. 이 잉여 포텐셜을 일으키는 것은 대개 돈을 가지고 싶어하거나 돈에 의지하려는 극단적인 욕망이다.<br>
+    우선은, 자신이 가진 것을 받아들이고 거기에 만족하라. 이보다 사정이 훨씬 나빴을 수도 얼마든지 있었다는 사실을 상기하라. 돈을 가지고자 하는 욕망을 거부할 필요는 없다. 지금으로서는 돈이 강물처럼 흘러들지 않는다는 사실을 받아들이기만 하면 된다. 이것을 게임을 하는 사람의 태도로 대하라. 게임을 하는 사람은 언제든지 엄청난 부자가 될 수도 있고, 또 가진 돈을 몽땅 잃을 수도 있다.
+    <br><br>
+
+    <a></a>
+    [리얼리티 트랜서핑1 155p] 저명한 러시아 작가 안톤 파블로비치 체호프는 이렇게 말했다. "나는 나 자신으로부터 한 방울 한 방울씩 노예근성을 짜내고 있다." 이 말은 죄책감을 모두 없애겠다는 포부를 밝히고 있는 것이다. 없앤다는 것은 그것과 싸운다는 뜻이다. 그러나 트랜서핑에는 투쟁이나, 뭔가를 하도록 자신을  강요하는 것은 없다. 투쟁하는 것보다 거부하는 편이 더 낫다. 다시 말하면, 선택하는 것이다. 죄책감을 밖으로 짜낼 필요가 없다. 그저 자신의 신조에 따라 사는 것만으로도 충분하다. 아무도 당신을 심판할 권리가 없다. 당신은 있는 그대로의 자신으로 존재할 권리가 있다. 있는 그대로 존재하기를 스스로에게 허용하면 자신에 대한 심판은 더이상 의미가 없어지며, 처벌에 대한 두려움도 사라진다. 그럴 때 참으로 놀랄 만한 일이 일어난다. - 이제는 아무도 감히 당신을 건드리려 들지 않는다는 것이다. 게다가 당신이 감옥, 군대, 직장, 뒷골목, 술집 그 어디에 있더라도 역시 마찬가지다. 당신은 누구에게서든 폭력으로 위협받는 상황에 두 번 다시 빠지지 않을 것이다. 다른 사람들은 때로 이런 저런 폭력을 당하더라도 당신은 그렇게 되지 않을 것이다. 당신은 잠재의식에서 죄책감을 떨쳐버렸고, 그래서 현재의 인생트랙에는 폭력의 시나리오가 존재하지 않기 때문이다. 그것이 이치다.
+    <br><br>
+
     <a></a>
     [리얼리티 트랜서핑1 155p] 육체적인 힘을 지닌 사람은 많으나 인품의 힘을 지닌 사람은 드물다. 한 개인이 가질 수 있는 위엄의 열쇠는 죄책감이 없는 데에 있다. 개인의 진정한 힘은 다른 사람의 목을 조르는 능력에 있는 게 아니라, 죄책감으로부터 얼마나 자유로울 수 있는지에 달려 있는 것이다.
     <br><br>
