--- a/Karazhan_library.html
+++ b/Karazhan_library.html
@@ -51,7 +51,7 @@
   <div id="contents">
     <img src="together.jpg" width="100%">
 
-    <h1>Karazhan Library[Lv.132]</h1><br><br><br>
+    <h1>Karazhan Library[Lv.133]</h1><br><br><br>
 
     <h3 style="text-align:center">Classes Acquired</h3><br>
 
@@ -206,7 +206,8 @@
     <h2><strong>과학[Lv.2]</h2></strong>
       2x[기억은 미래로 향한다]-한나 모니어, 마르틴 게스만<br>
       2X[창조하는 뇌]-데이비드 이글먼, 앤서니 브란트<br>
-    <h2><strong>자기계발[Lv.15]</h2></strong>
+    <h2><strong>자기계발[Lv.16]</h2></strong>
+      [리얼리티 트랜서핑2]-바딤 젤란드<br>
       [리얼리티 트랜서핑1]-바딤 젤란드<br>
       [절제의 성공학]-미즈노 남보쿠<br>
       [손정의처럼 일하라]-미키 다케노부<br>
@@ -242,6 +243,13 @@
 
 
 
+
+
+
+    <p><pre>
+      <h2>2022년 1월 독서</h2>
+        <li>자기계발:[리얼리티 트랜서핑2]-바딤 젤란드</li>
+    </p></pre>
 
     <p><pre>
       <h2>2021년 12월 독서</h2>
