--- a/Strategy_and_tactics.html
+++ b/Strategy_and_tactics.html
@@ -69,6 +69,11 @@
 
 
 
+
+
+  <a href="https://www.youtube.com/watch?v=AIvlc5TMWEM" title="인피쉰">
+    【 2021 Ver. 】 빨무 토스 강의! 이것만 알아도 고수다!</a><br>
+
   <a href="https://www.youtube.com/watch?v=b1WeWXgIgbQ&list=WL" title="인피쉰">
     【 인피쉰 】 빨무 기본 꿀 팁 강의!</a><br>
 
