--- a/Rhapsody_of_Zephyr.html
+++ b/Rhapsody_of_Zephyr.html
@@ -53,7 +53,7 @@
 
 
 
-  <h1>Rhapsody of Zephyr[Lv.38]</h1><br><br><br>
+  <h1>Rhapsody of Zephyr[Lv.37]</h1><br><br><br>
 
   <h3 style="text-align:center">Characters Obtained</h3><br>
 
@@ -69,7 +69,17 @@
 
 
 
+  <a></a>
+  [일목균형표 86] 불교의 선 용어 중에 임운자재라는 말이 있다. 임운은 흐르는 대로 맡긴다는 의미이며 자재는 스스로 존재한다는 뜻이다. 즉, 언제 어느 때나 무리를 하지 않음으로써 스스로 존재한다는 의미를 나타낸다. 지금 나는 균형표의 존재가치를 증명하려 하고 있지만 실제로 임운 없이는 자재가 없다는 것이 30여 년간 균형표를 연구하면서 깨달은 바이다.
+  <br><br>
 
+  <a></a>
+  [일목균형표 49] 내가 다년간의 경험에서 스스로 체득한 것 역시 "예상으로 내달려서는 안 된다"는 것이다. 시렞 매매를 할 경우 예상은 어쨌든 희망적인 것이 되기 쉽고 그 때문에 시장의 현재성을 크게 잘못 보게 된다. 단지 나도 예측은 늘 하고 있다. 예측과 예상이 도대체 어떤 차이가 있느냐고 의아해 하는 사람들이 있을지 모르겠지만, 내가 말하는 예측이란 미리 헤아려볼 근거를 갖고 있어야 한다는 뜻이다. 그에 관해서는 이 책 후반에 자세히 쓸 에정인데, 가장 중요한 것은 균형표의 현재성에서 허용된 범위를 벗엉나지 않아야 한다는 점이다.
+  <br><br>
+
+  <a></a>
+  [일목균형표 7] 차가운 바위라도 그 위에 3년간 앉아 있으면 따뜻해진다는 말이 있다. 어려움을 참고 견디면 반드시 성공할 수 있다는 뜻이다. 읽고 이해했더라도 그 내용을 발전적으로 몸에 익히는 데는 시간이 필요하다. 시장에서 초조함이 금물이듯 공부 또한 초조한 마음으로는 되지 않는다. 대기만성을 기억하고 느긋하게, 진지하게 공부하시라.
+  <br><br>
 
   <a>10/13/2020 미국증시 TOP GAINERS 분석</a><br>
   <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
@@ -110,39 +120,6 @@
 
   <a>10/7/2020 한국증시 상한가 분석</a><br>
   <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
-
-  <a href="https://www.youtube.com/watch?v=iXnNMizmbIc" target="_blank" title="미국주식에 미치다 TV">
-    XBox 첫 출시이후 20년간 1700% 상승한 온라인 게임섹터, 지금도 늦지 않았다</a><br>
-
-  <a href="https://www.youtube.com/watch?v=ZyVPPqmLUcY" target="_blank" title="이상투자그룹">
-    [주식투자] 20분만 보세요. 꼭 봐야 할 재테크 주식 스터디 청중강의 2탄. 20년 후 전세계적 재테크 미래는?ㅣ주식강의 주식투자 주식기초 주식차트</a><br>
-
-  <a href="https://www.youtube.com/watch?v=IyvuqORNVa4" target="_blank" title="이상투자그룹">
-    [주식] 꼭 봐야 할 주식 스터디 청중 강의 1탄 고수의 기술, 기술적 분석 VS 기본적 분석 12분만 보세요. 한 번에 이해됩니다.</a><br>
-
-  <a href="https://www.youtube.com/watch?v=yT5yrJZCtlw" target="_blank" title="이상투자그룹">
-    [긴급] 코디엠 5년 갈 상승테마+미국 FDA인증 완료+자회사 상장 임박+흑자전환! l 이상우 수석 애널리스트 l 이상투자그룹</a><br>
-
-  <a href="https://www.youtube.com/watch?v=mqhWbtOZ2gI" target="_blank" title="이상투자그룹">
-    [VIP 주식] 남북경협 끝? 2탄 + 최고 실적 기업 + 알짜배기 제약바이오 두 종목 l 이상우 수석 애널리스트 l 이상투자그룹</a><br>
-
-  <a href="https://www.youtube.com/watch?v=zXlpmA6Y3iM" target="_blank" title="이상투자그룹">
-    [주식]15분만 보면 500% 돈버는 주식고수의 숨겨진 비법은? l 이상우 수석 전문가 l 이상투자그룹</a><br>
-
-  <a href="https://www.youtube.com/watch?v=-7oOMCANoG8" target="_blank" title="이상투자그룹">
-    [VIP주식] 임상 3상에 들어간 제약· 바이오 BEST 3선! 조선일보 대상 전문가의 특급 분석 아이큐어, 코오롱티슈진, 윈팩 이상우 수석 전문가 l 이상투자그룹</a><br>
-
-  <a href="https://www.youtube.com/watch?v=ImMnkezx5Is" target="_blank" title="이상투자그룹">
-    [주식대학] 개미가 세력을 이기는 방법 3탄 [캔들 양음양편] l 주식하는법 l 이상우 수석 애널리스트 l 이상투자그룹</a><br>
-
-  <a href="https://www.youtube.com/watch?v=w55qQWitIO4" target="_blank" title="이상투자그룹">
-    [주식] 2018년 대한민국 하반기를 이끌 주요 종목 베스트5 1탄! l 이상우 애널리스트 l 이상투자그룹</a><br>
-
-  <a href="https://www.youtube.com/watch?v=-wjNBiOlHBk" target="_blank" title="이상투자그룹">
-    [주식강의] 꼭 봐야할 남북경협주 역대급 총정리 1탄! 이것만 보면 끝 l 이상우 수석 애널리스트 l 이상투자그룹</a><br>
-
-  <a href="https://www.youtube.com/watch?v=ORCEIPQZ2sI" target="_blank" title="이상투자그룹">
-    [주식] 패닉과 발작 "미친 증시" 짚어 봐야 할 4가지 포인트!! 1탄! l 이상우 수석 전문가 l 이상투자그룹</a><br><br>
 
   <a>WOT Chart Objectification</a><br>
   <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
