--- a/Game_and_reality.html
+++ b/Game_and_reality.html
@@ -69,6 +69,14 @@
 
 
   <a></a>
+  [게임 인류 203p] 나는 이것을 자유와 방임의 차이라고 생각한다. 아이에게 지칠 때까지 게임을 하라고 한 다음 밖으로 나가버리면 방임이 된다. 그러나 같은 공간에 머물며 기다려주겠노라 말해 주는 것은 자유가 된다. 별것 아닌 것처럼 느껴지지만 아이가 느끼는 심리적 안정감에는 큰 차이가 있다. 아이가 자신의 감정에 대해 말을 할 때 필요한 것은 부모가 아이의 감정을 해석해 주는 것이 아니라 아이가 자신의 감정을 더 관찰할 수 있도록 기다려주는 것이라는 것을 잊지 말아야 한다.
+  <br><br>
+
+  <a></a>
+  [게임 인류 200p] 화가 났다는 것은 문제가 해결되지 않아 좌절했음을 의미하기도 한다. 해결이 안 되니 공격하는 것. 이 문제를 본인이 스스로 알아채야 한다. 화가 났다는 것은 자기 안의 에너지가 충분하지 못해 상대를 설득할 수 없는 상태를 말한다. 빨리 알아채고 되돌아 나오는 것이 무엇보다 중요하다.
+  <br><br>
+
+  <a></a>
   [메타버스 이미 시작된 미래 272p] The future is already here - it's just not very evently distributed. - William Gibson
   <br><br>
 
