--- a/Karazhan_library.html
+++ b/Karazhan_library.html
@@ -51,7 +51,7 @@
   <div id="contents">
     <img src="together.jpg" width="100%">
 
-    <h1>Karazhan Library[Lv.134]</h1><br><br><br>
+    <h1>Karazhan Library[Lv.166]</h1><br><br><br>
 
     <h3 style="text-align:center">Classes Acquired</h3><br>
 
@@ -91,7 +91,17 @@
 
 
     <p style="margin-top:45px;"><pre>
-    <h2><strong>경제[Lv.48]</h2></strong>
+    <h2><strong>경제[Lv.56]</h2></strong>
+      [브라질에 비가 내리면 스타벅스 주식을 사라]-피터 나바로<br>
+      [실전 투자강의]-앙드레 코스톨라니<br>
+      [투자는 심리게임이다]-앙드레 코스톨라니<br>
+      [돈, 뜨겁게 사랑하고 차갑게 다루어라]-앙드레 코스톨라니<br>
+      [구독경제]-마오웨이<br>
+      [블록체인혁명]-돈 탭스콧<br>
+      [금융시장의 포식자들]-장지웅<br>
+      [1일 1페이지 부자수업]-이현식, 최현진<br>
+      [보살핌의 경제학]-달라이 라마 등<br>
+      [오스트리아 경제학파의 고급 입문서]-랜달 홀콤<br>
       [차트의기술]-김정환<br>
       [일목균형표]-일목산인<br>
       [부의 미래 누가 주도할 것인가]-인호,오준<br>
@@ -139,7 +149,8 @@
       [앞으로 10년 경제 대위기가 온다]-정동희<br>
       [원더키디의 세대, IT는 우리의 일상을 어떻게 바꾸는가?]-이영복<br>
       [대한민국 부동산 흐름 읽는법]-신진수<br>
-    <h2><strong>역사[Lv.8]</h2></strong>
+    <h2><strong>역사[Lv.10]</h2></strong>
+      [화폐전쟁1]-쑹훙빙<br>
       [1일 1페이지 그날 세계사 365]-백재현<br>
       <b>3x[하룻밤에 읽는 영국사]-안병억</b><br>
       [하룻밤에 읽는 한국사]-최용범<br>
@@ -149,13 +160,16 @@
       2x[알렉산드로스 제국의 눈물]-제임스 롬<br>
       2x[약자를 위한 현실주의]-이주희<br>
       <b>3x[거의 모든 IT의 역사]-정지훈</b><br>
-    <h2><strong>철학[Lv.5]</h2></strong>
+    <h2><strong>철학[Lv.6]</h2></strong>
+      [소크라테스의 변명]-플라톤<br>
       [도덕경]-노자<br>
       [인간과 좀비의 목숨을 건 철학수업]-사쿠라 츠요시<br>
       [차라투스트라는 이렇게 말했다]-프리드리히 니체<br>
       [그래서 철학이 필요해]-고바야시 쇼테이<br>
       [내 안의 나를 깨우는 장자 외편]-장자<br>
-    <h2><strong>심리학[Lv.12]</h2></strong>
+    <h2><strong>심리학[Lv.14]</h2></strong>
+      [돈과 운을 끌어당기는 심리습관]-류쉬안<br>
+      [심리학이 이렇게 나를 변화시킬 줄이야]-류쉬안<br>
       [아들러의 인간이해]-알프레드 아들러<br>
       [습관과 중독]-이현수<br>
       [프레임]-최인철<br>
@@ -163,7 +177,7 @@
       [클루지]-개리 마커스<br>
       [뇌, 욕망의 비밀을 풀다]-한스-게오르크 호이젤<br>
       [욕망의 진화]-데이비드 버스<br>
-      <b>5x[성숙한 어른이 갖춰야 할 좋은 심리 습관]-류쉬안</b><br>
+      <b>6x[성숙한 어른이 갖춰야 할 좋은 심리 습관]-류쉬안</b><br>
       [자제력 수업]-피터 홀린스<br>
       [삶이 괴롭냐고 심리학이 물었다]-게일 브레너<br>
       [죽기 전에 한 번은 심리학을 만나라]-서상원<br>
@@ -178,7 +192,12 @@
       [호감 가는 대화에는 8가지 절대법칙이 있다]-스쿤<br>
       [마음을 훔치는 대화법]-임철웅<br>
       2x[침묵이라는 무기]-코르넬리아 토프<br>
-    <h2><strong>경영[Lv.10]</h2></strong>
+    <h2><strong>경영[Lv.15]</h2></strong>
+      [룬샷]-사피 바칼<br>
+      [확률적 사고의 힘]-다부치 나오야<br>
+      [린 스타트업]-애시 모리아<br>
+      [사기의 경영학]-김영수<br>
+      [일을 버려라!]-제이슨 프라이드<br>
       [승려와 수수께끼]-랜디 코미사<br>
       [러쉬]-토드 부크홀츠<br>
       [스틱!]-칩 히스·댄 히스<br>
@@ -189,7 +208,10 @@
       [크러시잇! 열정을 돈으로 바꿔라]-게리 바이너척<br>
       [크러싱 잇! SNS로 부자가 된 사람들]-게리 바이너척<br>
       [이것은 사업을 위한 최소한의 지식이다]-야마다 신야<br>
-    <h2><strong>사회[Lv.13]</h2></strong>
+    <h2><strong>사회[Lv.16]</h2></strong>
+      [신화의 힘]-조셉 캠벨<br>
+      [사피엔스]-유발 하라리<br>
+      [게임 인류]-김상균<br>
       [메타버스 새로운 기회]-김상균, 신병호<br>
       [메타버스 이미 시작된 미래]-이임복<br>
       [전쟁론]-카알 폰 클라우제비츠<br>
@@ -203,10 +225,21 @@
       [도덕적 인간은 왜 나쁜 사회를 만드는가]-로랑 베그<br>
       [협력의 역설]-애덤 카헤인<br>
       [재미란 무엇인가?]-벤 핀첨<br>
-    <h2><strong>과학[Lv.2]</h2></strong>
+    <h2><strong>과학[Lv.3]</h2></strong>
+      [모든 순간의 물리학]-카를로 로벨라<br>
       2x[기억은 미래로 향한다]-한나 모니어, 마르틴 게스만<br>
       2X[창조하는 뇌]-데이비드 이글먼, 앤서니 브란트<br>
-    <h2><strong>자기계발[Lv.17]</h2></strong>
+    <h2><strong>자기계발[Lv.27]</h2></strong>
+      [더 해빙]-이서윤<br>
+      [인생은 지름길이 없다]-스웨이<br>
+      [일을 잘한다는 것]-야마구치 슈<br>
+      [12가지 인생의 법칙]-조던 피터슨<br>
+      [몰입]-황농문<br>
+      [원칙]-레이 달리오<br>
+      [당신은 뇌를 고칠 수 있다]-톰 오브라이언<br>
+      [일의 격]-신수정<br>
+      [The Almanack of Naval Ravikant]-Eric Jorgenson<br>
+      [여사제 타프티]-바딤 젤란드<br>
       [리얼리티 트랜서핑3]-바딤 젤란드<br>
       [리얼리티 트랜서핑2]-바딤 젤란드<br>
       [리얼리티 트랜서핑1]-바딤 젤란드<br>
@@ -232,7 +265,9 @@
       <b>20X[삼국지]-나관중</b><br>
       [잠]-베르나르 베르베르<br>
       [82년생 김지영]-조남주<br>
-    <h2><strong>에세이[Lv.4]</h2></strong>
+    <h2><strong>에세이[Lv.7]</h2></strong>
+      [법화경 마음공부]-페이융<br>
+      [우리는 언젠가 만난다]-채사장<br>
       [헤르만 헤세의 나무들]-헤르만 헤세<br>
       [네 가지 약속]]-돈 미겔 루이스<br>
       [새는 날아가면서 뒤돌아보지 않는다]-류시화<br>
@@ -246,7 +281,75 @@
 
 
     <p><pre>
+      <h2>2023년 4월 독서</h2>
+        <li>경제:[브라질에 비가 내리면 스타벅스 주식을 사라]-피터 나바로</li>
+    </p></pre>
+
+    <p><pre>
+      <h2>2022년 10월 독서</h2>
+        <li>경영:[룬샷]-사피 바칼</li>
+        <li>경영:[확률적 사고의 힘]-다부치 나오야</li>
+        <li>심리:[성숙한 어른이 갖춰야 할 심리습관]-류쉬안</li>
+        <li>심리:[돈과 운을 끌어당기는 심리습관]-류쉬안</li>
+        <li>심리:[심리학이 이렇게 나를 변화시킬 줄이야]-류쉬안</li>
+        <li>경제:[실전 투자강의]-앙드레 코스톨라니</li>
+        <li>경제:[투자는 심리게임이다]-앙드레 코스톨라니</li>
+        <li>경제:[돈, 뜨겁게 사랑하고 차갑게 다루어라]-앙드레 코스톨라니</li>
+    </p></pre>
+
+    <p><pre>
+      <h2>2022년 9월 독서</h2>
+        <li>경제:[구독경제]-마오웨이</li>
+        <li>자기계발:[더 해빙]-이서윤</li>
+        <li>자기계발:[인생은 지름길이 없다]-스웨이</li>
+        <li>경제:[블록체인혁명]-돈 탭스콧</li>
+    </p></pre>
+
+    <p><pre>
+      <h2>2022년 8월 독서</h2>
+        <li>철학:[소크라테스의 변명]-플라톤</li>
+        <li>경제:[금융시장의 포식자들]-장지웅</li>
+        <li>에세이:[법화경 마음공부]-페이융</li>
+        <li>에세이:[우리는 언젠가 만난다]-채사장</li>
+        <li>경영:[린 스타트업]-애시 모리아</li>
+        <li>경영:[사기의 경영학]-김영수</li>
+        <li>경영:[일을 버려라!]-제이슨 프라이드</li>
+        <li>과학:[모든 순간의 물리학]-카를로 로벨라</li>
+        <li>자기계발:[일을 잘한다는 것]-야마구치 슈</li>
+    </p></pre>
+
+    <p><pre>
+      <h2>2022년 7월 독서</h2>
+        <li>자기계발:[12가지 인생의 법칙]-조던 피터슨</li>
+        <li>경제:[1일 1페이지 부자수업]-이현식, 최현진</li>
+        <li>사회:[신화의 힘]-조셉 캠벨</li>
+        <li>자기계발:[몰입]-황농문</li>
+        <li>역사:[화폐전쟁1]-쑹훙빙</li>
+        <li>자기계발:[원칙]-레이 달리오</li>
+        <li>경제:[보살핌의 경제학]-달라이 라마 등</li>
+        <li>자기계발:[당신은 뇌를 고칠 수 있다]-톰 오브라이언</li>
+        <li>자기계발:[일의 격]-신수정</li>
+    </p></pre>
+
+    <p><pre>
+      <h2>2022년 6월 독서</h2>
+        <li>사회:[사피엔스]-유발 하라리</li>
+        <li>자기계발:[The Almanack of Naval Ravikant]-Eric Jorgenson</li>
+    </p></pre>
+
+    <p><pre>
+      <h2>2022년 4월 독서</h2>
+        <li>경제:[오스트리아 경제학파의 고급 입문서]-랜달 홀콤</li>
+    </p></pre>
+
+    <p><pre>
+      <h2>2022년 3월 독서</h2>
+        <li>자기계발:[여사제 타프티]-바딤 젤란드</li>
+    </p></pre>
+
+    <p><pre>
       <h2>2022년 2월 독서</h2>
+        <li>사회:[게임 인류]-김상균</li>
         <li>자기계발:[리얼리티 트랜서핑3]-바딤 젤란드</li>
     </p></pre>
 
