--- a/The_economist.html
+++ b/The_economist.html
@@ -51,13 +51,14 @@
   <div id="contents">
   <img src="swords.gif" width="100%">
 
-  <h1>The Economist[Lv.30]</h1><br><br><br>
+  <h1>The Economist[Lv.31]</h1><br><br><br>
 
-  <h3 style="text-align:center">Armors Obtained</h3><br>
+
+  <!-- <h3 style="text-align:center">Armors Obtained</h3><br>
 
   <img src="Armor_Firebirds_breast.jpg" width="10%" title="Firebird's Breast">
   <img src="Armor_Firebirds_down.jpg" width="10%" title="Firebird's Down">
-  <img src="Armor_Firebirds_eye.jpg" width="10%" title="Firebird's Eye">
+  <img src="Armor_Firebirds_eye.jpg" width="10%" title="Firebird's Eye"> -->
 
 
   <br><br><br><br><br>
@@ -66,6 +67,168 @@
 
 
 
+
+
+  <a href="https://www.youtube.com/watch?v=lhTcts7zHwI" target="_blank" title="마스터장">
+    금리는 계속 오르고 부동산은 50% 떨어질 것으로 예상 되는데 ..주식 투자는 절대 안됩니다! 차라리 000 사세요!</a><br>
+
+    <p>
+      IMF 때는 우리나라만 상황이 안좋았고 해외는 호황이었다면 지금은 모두가 안좋다<br>
+      IMF 때는 우리가 살아남기 위해 자체적으로 금리를 올린 거지만<br>
+      지금은 전세계적으로 금리가 올라가니까 국가경쟁력 때문에 금리를 올리는 것이다<br>
+      중소형(원룸, 오피스텔)이 중요한 투자처가 될 것이다<br>
+      금리가 올라가면 월세와 전세 매물이 엄청 나올 것이다<br>
+      월세 매물은 세입자가 월세를 감당할 수 없어서 많이 나온다<br>
+      전세는 전세 대출을 받아야 하는데 전세대출 금리를 감당할 수 없다<br>
+      서울 다운타운에서 10~15km 반경 내의 원룸과 오피스텔이 기회<br>
+      주식의 경우, 기업 대출이 활발하지만 대부분 못막는다<br>
+      결국 CP 건드릴거고, CB 만기 못막는 기업들 쏟아질 것이다<br>
+      이중에서 M&A 되는 기업을 잡아라<br>
+      회사 자본금이 축적되어 있고 영업이익이 꾸준한 회사가 리스크가 낮다<br>
+      금리가 올라갈 때 급격하게 올라가는 산업을 주시해라
+    </p>
+
+  <a href="https://www.youtube.com/watch?v=T4Z4VVsMse0" target="_blank" title="마스터장">
+    쌍용차 KG그룹 인수 , 대한항공 아시아나 인수 한국의 매머드 급 M&A?! 잘 되겠습니까?</a><br>
+
+    <p>
+      KG그룹은 경쟁력 없다 / 강판의 핵심은 알루미늄 인고트인데 인고트 생산과 운영에 투자금이 너무 많이 들어갈 것이다<br>
+      바이오, 테슬라 우버 같은 기업들이 정점을 찍었지만 2년 안에 끝난다<br>
+      저금리 시대에는 돈의 유통이 쉽기에 기대 심리와 패키지를 많이 본다<br>
+      하지만 고금리 시대에는 정상적인 패턴 안에서 자금이 돌아간다<br>
+      전기차의 핵심기술은 배터 기술이지 구동기술이 아니다<br>
+      대한항공은 위기 때마다 회사 채권을 유통해서 버텼다<br>
+      인수가 완료되면 제주항공, 에어부산 등 항공사들이 수혜를 볼 수 있다<br>
+      노선이 빠지면 저가형 항공으로 가게 되어 있다<br>
+      비행기가 있어야 노선 확보를 하니까 비행기 사들일 것<br>
+      M&A와 관련해서는 "왜 인수하는가"와 "인수 후 잘 운영할 수 있는가"를 봐야 한다
+    </p>
+
+  <a href="https://www.youtube.com/watch?v=Ki5CLaVCwqA" target="_blank" title="마스터장">
+    [장트러블] '이상한 변호사 우영우' 4주 연속 1위 해도 #넷플릭스 무조건 무너집니다</a><br>
+
+    <p>
+      이제는 플랫폼이 중요한 게 아니고 작품이 중요하다<br>
+      키워드에 집착하지 않고 새로운 것을 창조할 수 있는 OTT가 성공한다
+    </p>
+
+  <a href="https://www.youtube.com/watch?v=XISAQGUBD7E" target="_blank" title="마스터장">
+    [장트러블] #부산 #부동산 #사업 부산? 망할 것 같아! #오셔닉스 해상도시 잘 되야 할 텐데 잘 되려면 엑스포에 달렸지!</a><br>
+
+    <p>
+      부산이 잘되려면 대형 회사들을 부산으로 유치하고 모든 규제를 풀어야 한다<br>
+      4차, 5차 산업으로 컨셉을 잡아야 한다<br>
+      엑스포가 잘되어야 하고, 조선업은 무너졌다고 봐야 한다<br>
+      해운대, 광안리 아파트 사면 안되고 북항에 기회가 있다
+    </p>
+
+  <a href="https://www.youtube.com/watch?v=tDyrFpYRSvw" target="_blank" title="마스터장">
+    [장트러블] 코인, NFT, 가상 자산 투자할 때 유의해야 할 한 가지 '이것'만 기억하세요</a><br>
+
+    <p>
+      NFT 음원 : 새로운 조합을 통해 가치 부여<br>
+      암호화폐는 플랫폼을 가지고 사용할 수 있게 만들어야 한다<br>
+      실물 자산과 연동되는 암호화폐에 투자하면 안된다<br>
+      연동과 사용은 다르다<br>
+      실물 자산과 가상 자산이 연동되면, 실물 자산의 부채가 높아지면서 암호화폐도 같이 죽는다<br>
+      암호화폐 투자는 트레이딩 관점에서 거래량과 실물 자산 연동이 안된 것만 확인하면 된다
+    </p>
+
+  <a href="https://www.youtube.com/watch?v=o9vPtidGtH0" target="_blank" title="마스터장">
+    [마스터장] 필연적 금리 인상?! 다가올 부동산 줍줍의 시기는?</a><br>
+
+    <p>
+      한국이 버티려면 한국 기준 금리가 미국 기준 금리보다 최소 1.5% 이상 높아야 된다<br>
+      전 정부가 실패했던 요인 : '임대차3법'으로 가진 사람들을 죽이려고 했는데 못죽였다(퇴로를 안줌)<br>
+      금리를 확실히 올리면 자기 자산을 뱉어내면서 부채가 줄어든다<br>
+      시장을 볼 땐 저소득층의 상위권에서 중산층의 상위권 범주에서 봐야한다<br>
+      고금리를 못버티고 매물이 쏟아질 때가 매수 포인트<br>
+      보통 한국 기준금리가 3.5%를 돌파하게 되면 월세 대란이 일어난다<br>
+      대부분의 사람들이 비싼 월세를 주고 안살기에 월세를 못구한다<br>
+      사람들은 무조건 전세로 가거나 외곽으로 빠진다<br>
+      월세를 올려도 월세가 안 나가는 현상이 발생한다 -> 급매 확률 UP -> 현금으로 줍줍<br>
+      강남 압구정동, 용산 동부이촌동, 한남동 같은 곳들에 주택 공급하는 것이 아니라면 공급으로 집값으로 떨어뜨릴 수는 없다<br>
+      주식시장이든 부동산 시장이든 금리만 보면 된다
+    </p>
+
+  <a href="https://www.youtube.com/watch?v=vj790LmJ2r8&t=176s" target="_blank" title="마스터장">
+    [장트러블] 금리 인상에 주목해야 할 2가지 투자 방법 알려드림.</a><br>
+
+    <p>
+      10월 정도에 스태그플레이션 예상<br>
+      비전이나 회사의 미래 같은 것들을 염두에 두면서 투자하면 안된다<br>
+      금리가 오르고 물가가 치솟을 때는 이 회사가 왜 시가총액을 올려야 되는지에 대한 당위성만 놓고 투자해야 한다<br>
+      회사채를 많이 발행하고 경영권이 바뀌는 것 같은 회사에 투자<br>
+      원자재 장기 투자(알루미늄 인고트, 전기동) : 올해 연말에서 내년에 급등 가능<br>
+      소비자 물가 지수 UP(제조 단가 UP, 생산 단가 UP) -> 단가에 맞춰주는 원자재 유통이 필요<br>
+      -> 유통의 핵심이 알루미늄 인고트와 전기동
+    </p>
+
+  <a></a>
+  [브라질에 비가 내리면 스타벅스 주식을 사라 76-77p] 통화정책은 침체된 경기를 자극하기 위해 통화량을 늘리거나, 과열된 인플레이션을 낮추기 위해 통화량을 줄이는 것을 말한다. 연준은 통화정책을 실시하기 위해 다음 두 가지 방법을 사용한다.<br>
+  첫 번째는 공개시장 조작이다. 간단히 말해 통화량을 늘리고 금리를 낮추고 싶으면 정부 발행 유가증권을 사들이고, 통화량을 줄이고 금리를 올리고 싶으면 정부 발행 유가증권을 파는 것이다.<br>
+  공개시장 조작이 연준의 가장 중요한 무기라면, 두 번째는 적어도 그린스펀 시대에는 선택 수단이 되었다. 그것은 재할인율과 연방기금 금리를 정하는 것이다. 재할인율은 시중은행이 연준에서 돈을 빌릴 때 연준이 부과하는 금리이고, 연방기금 금리는 시중은행들이 서로 돈을 빌릴 때 적용하는 금리다. 재할인율과 연방기금 금리가 낮아지면 시중은행들은 좀더 싸게 돈을 빌릴 수 있어 통화량이 늘어난다. 반대로 올라가면 돈을 빌리는 게 더 비싸지므로 경제가 수축한다.
+  <br><br>
+
+  <a></a>
+  [브라질에 비가 내리면 스타벅스 주식을 사라 73-74p] 거시경제에 밝은 투자자는 두 가지 재정적자 자금 조달법, 즉 국채와 화폐 발행이 금융시장에 각기 다른 영향을 준다는 것을 확실히 이해해야 한다. 국채를 발행하는 경우, 금리 상승으로 주식시장이 둔화되고 달러 가치가 상승한다. 바로 공매와 환투기에 최적인 환경이다. 반대로 화폐를 발행하고 저금리인 경우, 국채 가격은 통화 가치에 따라 하락하는 반면 주식시장은 활기를 띤다. 적어도 단기간은 주식이 강세로 돌아선다. 그러나 이지 머니 정책이 인플레이션을 조장한다면, 아서 번즈 때처럼 월스트리트맨 모두 탈출구를 향해 뛰어갈 것이다.
+  <br><br>
+
+  <a></a>
+  [브라질에 비가 내리면 스타벅스 주식을 사라 73p] 정부의 인쇄기는 분명 당신의 포트폴리오 혹은 멋진 공매도 기회를 크게 위협할 수 있다. 그러나 연준은 재정적자를 만회하기 위해 어떻게 돈을 찍어낼까?<br>
+  그것은 미 재무부 채권이 공개시장에 나오기 전에 연준이 구입할 때 일어난다. 이 경우 연준이 정부의 재정정책을 '조정했다'고 말하는데, 재무부 채권이 공개시장에서 회사채와 경쟁하지 못하도록 매입했기 때문이다. 이런 이유로 이런 재정적자 자금 조달 방식은 '화폐를 발행하는 것'과 똑같다. 연준이 재무부 채권에 지불한 수표는 은행 준비금을 늘린다.
+  <br><br>
+
+  <a></a>
+  [브라질에 비가 내리면 스타벅스 주식을 사라 71p] 채권 자금 조달책을 들고 미 재무부는 곧바로 민간 금융시장으로 달려가 적자를 메우기 위해 채권을 판다. 이 선택의 커다란 위험은 정부의 채권 판매가 금리를 올려 결국 민간 투자를 밀어낸다는 것이다. 재무부가 채권을 팔기 위해서는 금리를 올려야 하는데, 고금리는 회사채의 매력을 떨어뜨리고 그 결과 민간 투자 수준이 낮아진다. 주식시장과 채권 시장이 재정적자 때문에 불안에 떠는 이유다.<br>
+  이 모순을 주목해야 한다. 정부는 불경기 때 소비와 투자의 하락을 만회하기 위해 정부지출을 늘린다. 그러나 정부가 지출 자금 조달을 위해 채권을 팔면 금리가 상승하고 GDP 계산 공식 중 투자 영역이 더 감소한다. 정부지출은 증가하는데 민간 투자는 감소하는 수준이 되면 민간 부문이 밀려나고 재정정책은 효과적이지 못한 수단으로 전락하게 된다.
+  <br><br>
+
+  <a></a>
+  [브라질에 비가 내리면 스타벅스 주식을 사라 70p] 재정정책이 어떻게 그리고 왜 증시에 여파를 일으키는지는 매크로 투자자의 흥미를 불러일으킨다. 정부는 지출 증대 혹은 세금 감면을 위해 재정적자를 늘려야 하기 때문이다. 여기서 매크로 투자자는 중요한 질문 하나를 떠올린다. 정부는 팽창 정책으로 불거진 재정적자를 어떻게 메울까?<br>
+  현실적으로 적자를 메우는 방법은 두 가지다. 정부는 채권을 팔거나 통화를 찍어낼 수 있다. 그리고 여기서 확실히 해둘 점은 이 두 가지 방법이 매크로 투자자에게 위험의 기회이자 이윤 창출의 기회가 된다는 것이다.
+  <br><br>
+
+  <a></a>
+  [브라질에 비가 내리면 스타벅스 주식을 사라 43-44p] 무역적자 급상승은 외국 투자자들에게 달러 약세를 예고하는 신호가 된다. 달러 약세가 점쳐지는 상황에서 주식 보유를 원치 않는 그들은 현금을 미국 시장 밖으로 빼돌린다. 이것은 다우존스지수와 나스닥지수를 하락시키는 압력을 행사할 뿐 아니라, 더 강력한 힘으로 달러 하락을 부추긴다. 증시가 급격히 내려앉기 시작하면 수많은 국내 및 외국 투자자들은 공포스러운 매도에 합류한다. 이때 연준 또한 공포를 즐긴다. 그래서 더 많은 외국 투자를 끌어들여 달러 가치가 높아지도록 금리를 올린다. 그러나 이런 고금리는 경기 둔화를 야기하고 증시를 더 저하시켜 이 조치는 실패로 끝나게 된다.
+  <br><br>
+
+  <a></a>
+  [브라질에 비가 내리면 스타벅스 주식을 사라 42p] 재정이 적자가 되면 정부는 부족분을 채우기 위해 국민들에게 돈을 빌려야 한다. 그러 위해 채권을 발행해 시장에 내다 판다. 이때 정부는 회사채와 다른 금융 상품들과 경쟁해야 한다. 이것은 부족한 자금 간의 싸움이 되어 금리 상승을 부추긴다. 물론 월스트리트는 금리 상승을 싫어한다. 고금리는 투자 감소, 더딘 성장, 기업의 매출 저조를 의미하기 때문이다. 그래서 고질적인 재정적자는 경제를 망가뜨리고 증시를 무너뜨릴 수 있다.<br>
+  재정흑자와 관련된 문제에서는 정부 부처들의 경쟁이 종종 금융시장에서 재미있는 역류를 이끌어낼 수 있다. 2000년 상반기에 일어난 일은 주목할 만한 예다. 연준은 과열된 경기를 위축시키고 인플레이션과 싸우기 위해 금리를 꾸준히 인상하고 있었다. 반면 재무부는 대규모 채권 환매를 시작했다. 꾸준한 재정흑자로 공채를 줄일 수 있는 잉여 자금이 생겼기 때문이다. 그러나 이런 조치는 금리를 떨어뜨려 연준 정책과 크게 어긋나는 효과를 냈다.
+  <br><br>
+
+  <a></a>
+  [브라질에 비가 내리면 스타벅스 주식을 사라 40p] 생산율은 노동자당 생산량 증가를 측정하는 것으로, 생산성에 관한 좋은 뉴스만큼 월스트리트의 영혼을 달래주는 것도 없다. 사실 생산율은 매크로 투자자가 추적할 수 있는 가장 중요한 경제 지표 중 하나이며, 거기에는 두 가지 이유가 있다.<br>
+  첫째, 생산성 증가는 임금 인플레이션을 막을 수 있는 최고의 해독제다. 만약 생산성이 매년 3% 상승한다면, 임금도 인플레이션 효과 없이 3% 증가할 수 있다. 그러나 생산성은 매년 1% 미만 상승하는데 임금이 3% 증가한다면 어떻게 될까? 임금 인플레이션이 발생하고 연준의 관심과 진노를 초래할 것이 확실하다.<br>
+  이것이 생산율이 중요한 두 번째 이유를 불러온다. 장기적으로 노동시간을 늘리지 않는 한, 임금은 인플레이션을 감안한 조건에서 간단히 올릴 수 없다. 이는 간단하고 분명한 방정식이며, 다음 통계에서도 확실히 드러난다. 1948년에서 1973년 사이, 노동생산성이 매년 3% 증가하는 동안 실질임금도 거의 똑같은 속도로 증가했다. 미국 노동자들은 최상의 시기를 보냈다. 공장 노동자 수백만 명이 자애로운 생산성 덕분에 풍요를 누리는 중산층으로 격상될 수 있었다.
+  <br><br>
+
+  <a></a>
+  [브라질에 비가 내리면 스타벅스 주식을 사라 35p] 고용보고서 외에 다른 유용한 불황 지표들도 있다. 예를 들어 매크로 투자자들은 자동차 판매와 주택 착공에 관한 월간 보고서를 주시한다. 이 보고서는 경제가 불황기로 접어들 때 가장 먼저 쇠퇴하는 두 가지 경제 지표를 관측한다. 소비자들이 경제 전망을 어둡게 볼 때 가장 먼저 자동차나 주택을 구매하는 일을 연기하거나 취소하기 때문에 이 두 가지 지표가 가장 먼저 떨어진다.<br>
+  불황이라도 사람들은 여전히 밥을 먹고 약을 사며 병원을 찾아야 하지만, 새 자동차나 집을 사거나 휴가를 떠나는 일은 연기할 수 있기 때문이다.
+  <br><br>
+
+  <a></a>
+  [브라질에 비가 내리면 스타벅스 주식을 사라 33-34p] 인플레이션 호랑이에게 접근하기 전에, 먼저 이 위험한 짐승에는 세 종류가 있다는 걸 알아야 한다.<br>
+  첫째, 경제 호황과 함께 부족한 상품을 사기 위한 현금이 넘쳐날 때 발생하는 수요 견인(demand-pull) 인플레이션이 있다. 해결하기 쉬운 인플레이션은 없지만 그나마 이 호랑이는 쉽게 길들여지는 편이다. 둘째, 유가 상승이나 가뭄으로 인한 식품 가격 상승처럼 공급 감소로 인해 발생하는 비용 인상(cost-push) 인플레이션이 있다. 이 인플레이션은 매우 빠르게 진행되고 상처도 대단히 커서 연준이 종종 욕을 많이 먹는다. 마지막으로, 천천히 모습을 드러내지만 위험도가 가장 높은 임금(wage) 인플레이션이 있는데, 대개 수요 견인 인플레이션과 비용 인상 인플레이션의 압력 때문에 일어난다.<br>
+  이 세 종류의 인플레이션 호랑이를 빠르고 확실히 구분하지 못하면 소비자물가지수와 생산자물가지수 같은 경제 지표의 메시지를 잘못 해석하기 쉽다. 그럴 경우 예상되는 결과는 인플레이션 호랑이 중 하나가 점심으로 당신의 투자 자금을 삼키고 크게 트림한 다음 고맙다는 말 한마디 없이 유유히 사라지는 것이다. 이런 사태는 한 가지 단순한 이유만으로도 사실이 될 수 있다. 인플레이션에 대한 뉴스를 들었을 때, 연준과 월스트리트는 각자 실제로 두려워하는 호랑이 종류에 따라 전혀 다르게 반응하기 때문이다.<br>
+  예를 들어 연준은 수요 견인 인플레이션이 근원인플레이션율을 증가시킬 때에는 재빨리 금리를 올리지만, 에너지나 식품처럼 공급 감소로 비용 인상 인플레이션의 압력이 발생했을 때에는 훨씬 더 조심스럽게 행동한다. 이런 반응과 정반대편에 선다면 완전히 망하는 것이다.
+  <br><br>
+
+  <a></a>
+  [브라질에 비가 내리면 스타벅스 주식을 사라 29p] 매크로 투자자는 인플레이션이 증가하면 연준이 금리를 올린다는 것을 알고 있다. 그리고 금리가 오르면 외국의 투자를 추가로 끌어들이기 때문에 달러 가치가 상승한다. 거시적 파동 논리의 이 특별한 연결에서 중요한 고리는 외국인이 미국에 투자하기 위해서는 먼저 외환을 달러로 환전해야 한다는 점이다. 이렇게 달러 수요가 급증하면 달러 가격이 상승한다.<br>
+  그렇다면 달러 강세는 무역수지에 어떤 영향을 미칠 것인가? 매크로 투자자는 적자가 늘어난다는 것을 안다. 달러 강세는 미국의 수출 가격을 올리고 수입품을 값싸게 만들기 때문에 미국 기업들의 수출량은 줄어들고 소비자들의 수입품 구매는 증가한다. 그래서 무역적자가 늘어난다.<br>
+  그렇다면 증시에서는 누가 이익을 얻고 누가 손해를 입을까? 농업, 약품, 철강과 같은 수출 의존 업종은 수출량이 떨어지면서 이윤이 감소하기 쉬우니 철강회사 뉴코어와 제약회사 머크와 같은 쪽박주는 매크로 투자자가 피하거나 공매도해야 할 대상이 된다. 반면에 미국에 대량 수입되는 BASF, BMW, 에릭슨 같은 외국계 기업은 매출액 상승을 누리게 된다.
+  <br><br>
+
+  <a></a>
+  [오스트리아 경제학파의 고급 입문서 18-19p] 이러한 유형의 '불확실성'과 '분산적이고 암묵적인 지식'에도 불구하고 시장은 하나의 발견 과정이다. 왜 그런가? 우리는 행동 A 또는 B가 더 이로운지 정확히 알 수 없다. 왜냐하면 그 대답은 사람들의 '주관적인 선호들'에 달려 있으며, 그러한 선호들은 오직 '시장 거래들'을 통해서만 드러나기 때문이다. 따라서 시장이 없으면 정보는 결코 존재하지 않는다. 또한 사람들은 자신에게 이익이 되도록 경제적 자원을 배분하기 위하여 자신이 가진 지식을 사용할 수 있다. 그 결과 시장은 지식을 효과적으로 사용하는 사람들에게 '이익'으로 보상하고, 지식을 비효과적으로 사용하는 사람들에게는 '손실'로 처벌한다. 따라서 시장은 지식을 바탕으로 소비자들이 원하는(가장 가치가 있다고 평가하는) 재화와 서비스로 자원을 배분하는 하나의 메커니즘을 제공해 준다. 시장에서 많은 경우에 이익을 가져다주는 결정들은 우월한 지식의 결과이지만, 다른 경우에는 그저 행운의 결과이다. 여하튼 정보는 시장의 산물이며, 시장이 없으면 정보는 결코 존재하지 않는다. 일단 시장이 '이로운 행동'을 알려준다면 그러한 정보는 시장의 모든 참가자들에게 알려지며, 이를 바탕으로 시장의 힘은 경제에 부가가치를 제공하는 재화와 서비스를 생산하게 해준다.
+  <br><br>
+
+  <a></a>
+  [오스트리아 경제학파의 고급 입문서 18p] 사람들의 지식은 대체로 분산적이고 암묵적일 뿐 아니라 불완전하거나 불확실하다.
+  <br><br>
 
   <a></a>
   [부의 미래 누가 주도할 것인가 265p] 이탈리아 나폴리 가까이에 '쿠마이'라는 한적한 지방이 있습니다. 로마가 이탈리아반도를 제패하기 전 쿠마이는 고대 그리스인의 식민지였습니다. 전설에 의하면 쿠마이의 으슥한 동굴에는 시빌라가 살았습니다. 시빌라는 신탁을 받아 미래를 예언하는 무녀를 뜻합니다. 쿠마이의 시빌라는 로마가 왕정이던 시절 마지막 왕인 타르퀴니우스에게 왕국의 미래에 대해 쓴 아홉 권의 예언서를 가져갔습니다. 시빌라는 "이 아홉 권의 예언서를 사십시오" 하며 타르퀴니우스에게 비싼 값을 불렀습니다.<br>
